--- a/sftp-config.json
+++ b/sftp-config.json
@@ -23,8 +23,8 @@
 
 ////////////////////////////////////////above is for test and below is for deployment
     // "host": "192.168.1.8",
-    // "user": "llcweb",
-    // "password": "moore161",
+    // "user": "username",
+    // "password": "password",
     // "port": "22",
     
     // "remote_path": "/pythonweb/clt-langlabs-dev-py/",
